--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -89,7 +89,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: build/distributions/kdux_artifacts_${{ env.VERSION }}.zip
-          asset_name: stratify_artifacts_${{ env.VERSION }}.zip
+          asset_name: kdux_artifacts_${{ env.VERSION }}.zip
           asset_content_type: application/zip
 
       - name: Publish to Nexus OSSRH for Maven Central
